fix: add SpendingMode import, fix CardThemeData compat, pin intl 0.19.0

--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
   <nav class="navbar">
     <div class="container nav-content">
       <a href="/" class="logo">
-        <span class="logo-icon">👨‍👦</span>
+        <img src="./assets/logo.png" alt="AI Daddy" class="logo-img">
         <span class="logo-text">AI Daddy</span>
       </a>
       <div class="nav-links">
@@ -64,7 +64,8 @@
         <div class="phone-mockup">
           <div class="phone-screen">
             <div class="mock-header">
-              <span>👨‍👦 AI Daddy</span>
+              <img src="./assets/logo.png" alt="AI Daddy" class="mock-logo">
+              <span>AI Daddy</span>
             </div>
             <div class="mock-messages">
               <div class="mock-msg ai">
@@ -212,7 +213,7 @@
     <div class="container">
       <div class="footer-grid">
         <div class="footer-brand">
-          <span class="logo-icon">👨‍👦</span>
+          <img src="./assets/logo.png" alt="AI Daddy" class="logo-img">
           <span class="logo-text">AI Daddy</span>
           <p>Your always-there AI father.<br>Made with ❤️</p>
         </div>
