--- a/website/privacy.html
+++ b/website/privacy.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="container nav-content">
       <a href="/" class="logo">
-        <span class="logo-icon">👨‍👦</span>
+        <img src="./assets/logo.png" alt="AI Daddy" class="logo-img">
         <span class="logo-text">AI Daddy</span>
       </a>
       <div class="nav-links">
